@@ -48,13 +48,26 @@ public class ActiveTicker extends StdBehavior
 
 	protected int minTicks=10;
 	protected int maxTicks=30;
+	protected int minGroup=1;
 	protected int chance=100;
+	protected volatile int grpCount = 0;
 	//protected short speed=1;
 	protected int tickDown=(int)Math.round(Math.random()*(maxTicks-minTicks))+minTicks;
 
 	protected void tickReset()
 	{
-		tickDown=(int)Math.round(Math.random()*(maxTicks-minTicks))+minTicks;
+		if(minGroup == 1)
+			tickDown=(int)Math.round(Math.random()*(maxTicks-minTicks))+minTicks;
+		else
+		{
+			if(++grpCount >=minGroup)
+			{
+				tickDown=(int)Math.round(Math.random()*(maxTicks-minTicks))+minTicks;
+				grpCount=0;
+			}
+			else
+				tickDown=minTicks;
+		}
 	}
 
 	@Override
@@ -64,6 +77,7 @@ public class ActiveTicker extends StdBehavior
 		minTicks=CMParms.getParmInt(parms,"min",minTicks);
 		maxTicks=CMParms.getParmInt(parms,"max",maxTicks);
 		chance=CMParms.getParmInt(parms,"chance",chance);
+		minGroup=CMParms.getParmInt(parms,"mingrp",minGroup);
 		tickReset();
 	}
 
@@ -73,6 +87,8 @@ public class ActiveTicker extends StdBehavior
 		rebuilt.append(" min="+minTicks);
 		rebuilt.append(" max="+maxTicks);
 		rebuilt.append(" chance="+chance);
+		if(minGroup != 1)
+			rebuilt.append(" mingrp="+minGroup);
 		return rebuilt.toString();
 	}
 
