@@ -5177,9 +5177,11 @@ after the cry is made.
 
 SKILL_WARRANTS=WARRANTS
 WARRANTS=<ABILITY>\
-Example  : \n\r\
+Usage    : WARRANTS ([NAME])\n\r\
+Example  : warrants\n\r\
 The player, using nothing more than local contacts and charismatic \
-persuasion, gathers information about all warrants and wanted criminals.
+persuasion, gathers information about all warrants and wanted criminals. \
+A filter name may be given.
 
 DRUID_WATERCOVER=WATER_COVER
 WCOVER=WATER_COVER
