@@ -849,7 +849,7 @@ WEATHER_DROUGHT= \
 #  [himherself] [hisherself]
 GENDERS= \
         M|  M| male|   him| his| he|  sir|   mr.| mister| man|    son|     boy|   himself|  hisself, \
-        F|  F| female| her| her| she| madam| ms.| madam|  woman|  daughter girl|  herself| herself, \
+        F|  F| female| her| her| she| madam| ms.| madam|  woman|  daughter|girl|  herself| herself, \
         N-| N| neuter| it|  its| it|  sir|   mr.| mister| person| child|   child| itself| itself
 
 # What users see when the weather condition cloudy begins
