@@ -19,6 +19,8 @@
  18. Prop_WearAdjuster allows dressing and content manipulation, from outside (saddlebags).
  19. New item: GenBagOfHolding
  20. REMOVE command can now target a wear location.
+ 21. Warrants skill can now accept a filter argument
+ 22. Shopkeepers listing their own inventory can see amount of stock.
 
 # Build 5.10.1 Release 1/01/2023
   1. FasterRecovery expanded and new char stat REJUVRATE for Prop*Adjuster
